app/assets/stylesheets/components/_modalmessagerie.scss
// Model part
.modal-content {
  z-index: 5;
}

.modal {
  display: block;
  position: fixed;
  z-index: 1;
  padding-top: 5%;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0,0,0);
  background-color: rgba(0,0,0,0.7);
}

.modal-content {
  background-color: #fefefe;
  margin: auto;
  border: 1px solid #888;
  width: 90%;
  height: 90%;
  border-radius: 8px;
}

.close {
  margin-right: 8px;
  font-size: 28px;
  font-weight: bold;
  position: absolute;
  right: 4px;
  top: 4px;
}

.close:hover,
.close:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}

.modal-roadtrip{
  height: 100%;
}

// Left part (Roadtrips)
.roadtrips-chat-title{
  padding: 8px;
  border-bottom: 1px solid lightgrey;

  h3{
    margin: 0;
  }
}

.roadtrip-button{
  cursor: pointer;
  border-bottom: 1px solid lightgrey;
  padding: 8px;
  position: relative;

  &:hover{
    background-color: #ddd;
  }
}

.last-message{
  color: grey;
}

.roadtrip-lastmessage{
  p{
    margin: 0;
    text-align: start;
    color: grey;
  }
}

.roadtrip-lastmessage-date{
  display: flex;
  justify-content: flex-end;
  position: absolute;
  right: 8px;
  p{
    margin: 0;
    color: grey;
  }
}

.roadtrip-title{
  color: black !important;
}

// Right part (Messages)
.roadtrip-message{
  padding: 0;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-content: space-between;
  border-left: 1px solid lightgrey;
}

.modal-green-top{
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: $danger;
  height: 50.6px;
  width: 100%;
  border-radius: 0 8px 0 0;
  border-bottom: 1px solid rgb(143, 143, 143);
}

.messages-box{
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  padding: 8px;
  height: 100%;
  overflow: scroll;
  font-size: large;
}

.message-box-content{
  display: flex;
  margin-top: 4px;
  
  p{
    border-radius: 24px;
    padding: 8px 12px 8px 8px;
    background-color: #777;
    color: white;
    margin: 0;
  }
}

.message-box-content-currentuser{
  display: flex;
  justify-content: flex-end;
  margin-top: 4px;
  
  p{
    border-radius: 24px;
    padding: 8px 24px 8px 12px;
    background-color: $danger;
    color: white;
    margin: 0;
  }
}

.roadtrip-start-paragraph{
  font-size: small;
  color: grey;
  margin: 0;
}

.simple-textarea{
  position: relative;

  textarea{
    height: 38px;
    resize: none;
    border-radius: 38px;
  }

  input[type=submit]{
    position: absolute;
    right: 0;
    top: 0;
    border-radius: 38px;
  }
}

.active-button{
  background-color: #aaa;

  .last-message{
    color: #444;
  }

  .roadtrip-lastmessage-date{
    p{
      color: #444;
    }
  }
}

